--- a/app/src/main/res/layout/activity_watched_movies.xml
+++ b/app/src/main/res/layout/activity_watched_movies.xml
@@ -5,41 +5,42 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".WatchedMovies"
-    android:background="@color/light_purple">
+    android:background="@color/brown">
 
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/RecyclerViewMovies"
+        android:layout_width="406dp"
+        android:layout_height="602dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.025" />
 
     <ImageButton
         android:id="@+id/HomeBtnHome"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="50dp"
-        android:layout_marginBottom="20dp"
+        android:layout_width="161dp"
+        android:layout_height="60dp"
+        android:layout_marginStart="20dp"
+        android:layout_marginBottom="15dp"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@+id/SearchBtnHome"
+        app:layout_constraintEnd_toStartOf="@+id/SearchBtnHomee"
         app:layout_constraintStart_toStartOf="parent"
-        app:srcCompat="@android:drawable/btn_star"
-        tools:ignore="SpeakableTextPresentCheck" />
+        app:srcCompat="@drawable/ic_baseline_home_24"
+        android:background="@color/light_brown2"/>
 
     <ImageButton
-        android:id="@+id/SearchBtnHome"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="35dp"
-        android:layout_marginEnd="50dp"
-        android:layout_marginBottom="20dp"
+        android:id="@+id/SearchBtnHomee"
+        android:layout_width="161dp"
+        android:layout_height="60dp"
+        android:layout_marginStart="20dp"
+        android:layout_marginEnd="20dp"
+        android:layout_marginBottom="15dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/HomeBtnHome"
-        app:srcCompat="@android:drawable/ic_menu_search"
-        tools:ignore="SpeakableTextPresentCheck" />
-
-    <androidx.recyclerview.widget.RecyclerView
-         android:id="@+id/RecyclerViewMovies"
-         android:layout_width="409dp"
-         android:layout_height="654dp"
-         app:layout_constraintBottom_toTopOf="@+id/HomeBtnHome"
-         app:layout_constraintEnd_toEndOf="parent"
-         app:layout_constraintStart_toStartOf="parent"
-         app:layout_constraintTop_toTopOf="parent" />
+        app:srcCompat="@drawable/ic_baseline_search_24"
+        android:background="@color/light_brown2"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
