--- a/app/src/main/res/layout/recyclerviewcomment.xml
+++ b/app/src/main/res/layout/recyclerviewcomment.xml
@@ -11,7 +11,10 @@
         android:layout_width="115dp"
         android:layout_height="24dp"
         android:layout_marginTop="32dp"
+        android:fontFamily="monospace"
         android:text="TextView"
+        android:textSize="16sp"
+        android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.045"
         app:layout_constraintStart_toStartOf="parent"
@@ -22,7 +25,9 @@
         android:layout_width="388dp"
         android:layout_height="51dp"
         android:layout_marginTop="16dp"
+        android:fontFamily="casual"
         android:text="TextView"
+        android:textSize="16sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.541"
