--- a/app/src/main/res/layout/activity_comment_help.xml
+++ b/app/src/main/res/layout/activity_comment_help.xml
@@ -4,7 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".CommentHelp">
+    tools:context=".CommentHelp"
+    android:background="@color/brown">
 
     <androidx.fragment.app.FragmentContainerView
         android:id="@+id/fragmentContainerView2"
